--- a/.github/workflows/build-cu126-torch280.yml
+++ b/.github/workflows/build-cu126-torch280.yml
@@ -11,6 +11,7 @@ env:
   CUDA_SHORT: '126'
   PYTORCH_VERSION: '2.8.0'
   TORCH_SHORT: '280'
+  TORCH_MM: '28'
   TORCH_CUDA_ARCH_LIST: '7.5;8.6;8.9;9.0'
 
 jobs:
@@ -112,6 +113,8 @@ jobs:
           cd nvdiffrec_render_pkg
           pip install --no-build-isolation .
           python setup.py bdist_wheel
+          # Rename wheel with CUDA+PyTorch suffix
+          cd dist && for f in *.whl; do mv "$f" "$(echo $f | sed 's/-cp/+cu${{ env.CUDA_SHORT }}torch${{ env.TORCH_MM }}-cp/')"; done && cd ..
           ls -la dist/
 
       - name: Upload wheel
@@ -216,6 +219,16 @@ jobs:
           pip install --no-build-isolation .
           python setup.py bdist_wheel
           dir dist
+
+      - name: Rename wheel with CUDA+PyTorch suffix
+        shell: powershell
+        run: |
+          cd nvdiffrec_render_pkg\dist
+          Get-ChildItem *.whl | ForEach-Object {
+            $newname = $_.Name -replace '-cp', '+cu${{ env.CUDA_SHORT }}torch${{ env.TORCH_MM }}-cp'
+            Rename-Item $_.FullName $newname
+          }
+          Get-ChildItem
 
       - name: Upload wheel
         uses: actions/upload-artifact@v4
